# buoyfinder-v3

./: README.md  nano.exe.stackdump  vim.exe.stackdump
BuoyFinder/BuoyFinder/: ViewController.swift
BuoyFinder/BuoyFinder.xcodeproj/: project.pbxproj
BuoyFinder/BuoyFinder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BuoyFinder/BuoyFinder.xcodeproj/project.xcworkspace/xcuserdata/matthew.xcuserdatad/: UserInterfaceState.xcuserstate
BuoyFinder/BuoyFinder.xcodeproj/xcuserdata/matthew.xcuserdatad/xcschemes/: xcschememanagement.plist
android/app/: build.gradle
android/app/src/androidTest/java/com/mpiannucci/buoyfinder/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mpiannucci/buoyfinder/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/mpiannucci/buoyfinder/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml  README.md  build.rs  build_android.sh  cargo-config.toml  gen_bindings.sh
cargo/.cargo/: config  config~HEAD
cargo/bindings/cpp/: CMakeLists.txt
cargo/bindings/cpp/src/: buoy_station.cpp
cargo/bindings/java/com/mpiannucci/buoyfinder/core/: ExploreView.kt  ExploreViewData.kt  Location.kt  Store.kt
cargo/bindings/swift/: BuoyStation.swift  BuoyStationItemViewData.swift  ExploreViewData.swift  Location.swift  Store.swift
cargo/examples/: cli.rs
cargo/include/: buoyfinder.h
cargo/src/: app.rs  ffi.rs  lib.rs  location.rs  redux.rs  station.rs  strings.rs  units.rs  vm.rs
cli/: Cargo.toml
cli/src/: main.rs
controller/: Cargo.toml
controller/src/: lib.rs  redux.rs
controller/tests/: lib.rs
core/: .gitignore  Cargo.toml  README.md  build.rs  build_android.sh  create-ndk-standalone.sh  gen_bindings.sh
core/.cargo/: config
core/bindings/cpp/include/buoyfinder/: buoy_station.hpp
core/bindings/cs/: BuoyStation.cs  BuoyStationIcon.cs  BuoyStationItemViewData.cs  Color.cs  ExploreView.cs  ExploreViewData.cs  Location.cs  Store.cs
core/bindings/java/com/mpiannucci/buoyfinder/core/: BuoyStation.kt  BuoyStationIcon.kt  BuoyStationItemViewData.kt  Color.kt  ExploreView.kt  ExploreViewData.kt  Store.kt
core/bindings/swift/: BuoyStationItemViewData.swift  ExploreView.swift  ExploreViewData.swift  Location.swift  Store.swift  WeakHandle.swift
core/examples/: cli.rs
core/include/: buoyfinder.h  buoyfinder_core.h
core/src/: app.rs  ffi.rs  lib.rs  redux.rs
core/src/app/: actions.rs  color.rs  http.rs  mod.rs  redux.rs  vm.rs
core/src/app/state/: app_state.rs  data_state.rs  mod.rs
core/src/data/: buoy_data.rs  dimensional_data.rs  location.rs  mod.rs  station.rs  swell.rs  units.rs
core/src/data/buoy_data/: spectral_wave_data_record.rs  wave_data_record.rs
core/tests/: buoy_data_tests.rs  buoy_stations_tests.rs
ffi_derive/: Cargo.toml
ffi_derive/src/: lib.rs
ffi_derive/tests/: simple.rs
generator/: ast.py  binding_generator.py  idl_ast.py  idl_meta.py  idl_parser.py  main.py  meta.py  parser.py
generator/example/: hello.djinni
generator/example/hello_handwritten/rust/: Cargo.toml
generator/example/hello_handwritten/rust/src/: hello.rs  lib.rs  sort_items.rs
generator/examples/: hello.djinni
generator/templates/cpp/: enum.txt
generator/templates/kotlin/: enum.txt
generator/templates/rust/: enum.txt
generator/templates/swift/: enum.txt
ios/: Podfile
ios/BuoyFinder/: AppDelegate.swift  BuoyFinder-Bridging-Header.h  BuoyStationItemViewData+Extensions.swift  Color+UIColor.swift  ContentView.swift  ExploreViewController.swift  NearbyBuoysTableViewController.swift  SceneDelegate.swift  Theme.swift  ViewController.swift  buoyfinder_core.h
ios/BuoyFinder.xcodeproj/: project.pbxproj
ios/BuoyFinder.xcodeproj/project.xcworkspace/xcuserdata/miannucci.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BuoyFinder.xcodeproj/xcuserdata/miannucci.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/BuoyFinder.xcworkspace/: contents.xcworkspacedata
ios/BuoyFinder/Assets.xcassets/search_white_24pt.imageset/: Contents.json
ios/BuoyFinder/Assets.xcassets/star_border_white_24pt.imageset/: Contents.json
ios/BuoyFinder/Assets.xcassets/star_white_24pt.imageset/: Contents.json
ios/BuoyFinder/Base.lproj/: Main.storyboard
model/: Cargo.toml
