[package]
name = "buoyfinder"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]

[lib]
name = "buoyfinder"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "*"
serde = "1.0.71"
serde_derive = "1.0.71"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
futures = "~0.1"
futures-cpupool = "~0.1"
tokio = "*"

[target.'cfg(target_os="android")'.dependencies]
jni = "*"

[build-dependencies]
#cbindgen = "*"

[replace]
"mio-uds:0.6.6" = { git = "https://github.com/alexcrichton/mio-uds"}