[package]
name = "buoyfinder"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]

[lib]
name = "buoyfinder"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "*"
serde = "1.0.71"
serde_derive = "1.0.71"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
futures = "~0.1"
futures-cpupool = "~0.1"
tokio = "*"
log = "0.4"

[target.'cfg(target_os="android")'.dependencies]
jni = "*"
android_logger = "0.6"
#android_log = "0.1.3"
log-panics = "2.0.0"

[build-dependencies]
#cbindgen = "*"

[replace]
"mio-uds:0.6.6" = { git = "https://github.com/alexcrichton/mio-uds"}