[package]
name = "buoyfinder"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]

[lib]
name = "buoyfinder"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = "1.0.71"
serde_derive = "1.0.71"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
reqwest = "0.9"
futures = "~0.1"
futures-cpupool = "~0.1"
tokio = "0.1"
log = "0.4"
mio-uds = "0.6.7"
palette = "0.4"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.10"
android_logger = "0.6"
log-panics = "2.0.0"

[build-dependencies]
#cbindgen = "*"