[package]
name = "buoyfinder_core"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
edition = "2018"

[lib]
name = "buoyfinder_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
log = "0.4"
csv = "1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.10"
android_logger = "0.6"
log-panics = "2.0.0"

[build-dependencies]
#cbindgen = "*"