[package]
name = "buoyfinder"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]

[lib]
name = "buoyfinder"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "*"
serde = "1.0.71"
serde_derive = "1.0.71"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }

[build-dependencies]
#cbindgen = "*"
